# obsidian-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
src/: __init__.py  frontmatter_parser.py  server.py  vault_manager.py
tests/: __init__.py  test_frontmatter_parser.py  test_server.py  test_vault_manager.py
